# common-control

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  example.c  user_cross_compile_setup.cmake
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/: common-control.h  config.h  logging.h
include/common-control/: common-control.h
include/control-common/: control-common.h
source/: common-control.c  config.env  control-common.c  init-dev.sh  init.sh  init.sh.template  install.sh.template  kill.sh.template  logging.c  run.sh  run.sh.template
source/web/: index.html  package.json  script.js  styles.css
source/web/cgi-bin/: get-current-temperature.sh.template  get-target-temperature.sh.template  set-target-temperature.sh.template
test/: CMakeLists.txt
test/source/: control-common_test.c
